# Leadliftr

./: .replit  app.py  batch_processor.py  chrome_connector.py  csv_exporter.py  data_extractor.py  lead_scrubber.py  main.py  pyproject.toml  replit.md  simple_app.py
attached_assets/: landline scraper 7-17 updated.py
config/: field_mappings.json
static/: guide.css  guide.js  legal_pages.js  script.js  simple_script.js  style.css
templates/: index.html  privacy.html  simple_index.html  terms.html  user_guide.html
