[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "lxml>=5.4.0",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
]
